# q2hivemind

./: CMakeLists.txt  ProjectHome.md  ReinforcementLearning.md  TODO.md
cmake/: FindEigen2.cmake
data/: grid-q2dm1.hm
docs/: hivemind.tex
include/: algebra.h  context.h  dispatcher.h  event.h  globals.h  logger.h  object.h  timing.h
include/brains/: soldier.h
include/eann/: ann.h  behaviour.h  ga.h
include/fuzzy/: avoider.h  trapezoid.h
include/kdtree/: iterator.hpp  kdtree.hpp  region.hpp
include/mapping/: bsp.h  dynamic.h  exporters.h  grid.h  items.h  map.h
include/mold/: client.h  message.h  server.h
include/network/: connection.h  gamestate.h  util.h
include/planner/: directory.h  global.h  local.h  motion.h  poll.h  sensors.h  state.h
include/rl/: action.h  brains.h  brainstate.h  enumvector.h  statespace.h
include/simulation/: interface.h  local.h
include/states/: camper.h  dropweapon.h  goto.h  gotoammo.h  gotohealth.h  gotoupgrade.h  gotoweapon.h  respawn.h  shoot.h  swim.h  wander.h
include/voters/: droper.h  dummy.h
src/: CMakeLists.txt  algebra.cpp  context.cpp  dispatcher.cpp  event.cpp  logger.cpp  main.cpp  object.cpp
src/brains/: CMakeLists.txt  soldier.cpp
src/eann/: CMakeLists.txt  ann.cpp  behaviour.cpp  ga.cpp
src/fuzzy/: CMakeLists.txt  avoider.cpp
src/mapping/: CMakeLists.txt  dynamic.cpp  exporters.cpp  grid.cpp  items.cpp  map.cpp
src/mold/: CMakeLists.txt  bus.proto  client.cpp  control.proto  message.cpp  server.cpp
src/network/: CMakeLists.txt  connection.cpp  gamestate.cpp  util.cpp
src/planner/: CMakeLists.txt  directory.cpp  global.cpp  local.cpp  motion.cpp  poll.cpp  sensors.cpp  state.cpp
src/rl/: CMakeLists.txt  action.cpp  brains.cpp  brainstate.cpp  enumvector.cpp  statespace.cpp
src/simulation/: CMakeLists.txt  glue.cpp  interface.c  util.c
src/simulation/quake2/: CMakeLists.txt  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_trigger.c  g_utils.c  g_weapon.c  m_actor.c  p_client.c  p_hud.c  p_view.c  p_weapon.c  q_shared.h
src/states/: CMakeLists.txt  camper.cpp  dropweapon.cpp  goto.cpp  gotoammo.cpp  gotohealth.cpp  gotoupgrade.cpp  gotoweapon.cpp  respawn.cpp  shoot.cpp  swim.cpp  wander.cpp
src/voters/: CMakeLists.txt  droper.cpp  dummy.cpp
